--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --require @opentelemetry/auto-instrumentations-node/register index.js",
-    "test": "jest",
+    "test": "node node_modules/jest/bin/jest.js",
     "dev": "nodemon --require @opentelemetry/auto-instrumentations-node/register index.js"
   },
   "dependencies": {
